# detect-indent-rs

./: Cargo.toml  README.md  appveyor.yml
.github/workflows/: CI.yml
src/: lib.rs  main.rs
